--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 
 :root {
-    --sidebar-color: linear-gradient(35deg, #ce832d, #ca6d20);
+    --sidebar-color: linear-gradient(35deg, #1a62a5, #78b9f7);
     --shadow: 4px 4px 8px 3px rgba(0, 0, 0, 0.2);
 }
 
@@ -137,11 +137,11 @@ body.active .content {
 }
 
 .navigation-list-item:hover .navigation-link{
-    color:rgb(255, 255, 255, 0.7);
+    color:rgb(255, 255, 255);
 }
 
 .navigation-list-item.active .navigation-link{
-    color:rgb(255, 255, 255, 0.8);
+    color:rgb(255, 255, 255);
     font-weight:600;
 }
 
@@ -207,8 +207,8 @@ body.active .content {
     outline: none;
     border-radius: 16px;
     padding: 6px;
-    margin-top: 170%;
-    color: orange;
+    margin-top: 180%;
+    color: rgba(211, 43, 13, 0.815);
     background-color: rgb(255, 255, 255);
 
     box-shadow: var(--shadow);
